compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__edge_range_vs_struct_update.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [
                            Let {
                                pattern: Pattern {
                                    kind: Ident {
                                        by_ref: false,
                                        mutable: false,
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 2,
                                            },
                                            span: Span {
                                                start: 13,
                                                end: 14,
                                                start_line: 1,
                                                start_col: 14,
                                            },
                                        },
                                        subpattern: None,
                                    },
                                    span: Span {
                                        start: 13,
                                        end: 14,
                                        start_line: 1,
                                        start_col: 14,
                                    },
                                },
                                ty: None,
                                value: Some(
                                    Expr {
                                        kind: Range {
                                            start: Some(
                                                Expr {
                                                    kind: Literal(
                                                        Literal {
                                                            kind: Int {
                                                                value: 0,
                                                                suffix: None,
                                                            },
                                                            span: Span {
                                                                start: 17,
                                                                end: 18,
                                                                start_line: 1,
                                                                start_col: 18,
                                                            },
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 17,
                                                        end: 18,
                                                        start_line: 1,
                                                        start_col: 18,
                                                    },
                                                },
                                            ),
                                            end: Some(
                                                Expr {
                                                    kind: Literal(
                                                        Literal {
                                                            kind: Int {
                                                                value: 10,
                                                                suffix: None,
                                                            },
                                                            span: Span {
                                                                start: 20,
                                                                end: 22,
                                                                start_line: 1,
                                                                start_col: 21,
                                                            },
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 20,
                                                        end: 22,
                                                        start_line: 1,
                                                        start_col: 21,
                                                    },
                                                },
                                            ),
                                            inclusive: false,
                                        },
                                        span: Span {
                                            start: 17,
                                            end: 22,
                                            start_line: 1,
                                            start_col: 18,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 9,
                                    end: 23,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                            Let {
                                pattern: Pattern {
                                    kind: Ident {
                                        by_ref: false,
                                        mutable: false,
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 3,
                                            },
                                            span: Span {
                                                start: 28,
                                                end: 29,
                                                start_line: 1,
                                                start_col: 29,
                                            },
                                        },
                                        subpattern: None,
                                    },
                                    span: Span {
                                        start: 28,
                                        end: 29,
                                        start_line: 1,
                                        start_col: 29,
                                    },
                                },
                                ty: None,
                                value: Some(
                                    Expr {
                                        kind: Record {
                                            path: Some(
                                                TypePath {
                                                    segments: [
                                                        TypePathSegment {
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 4,
                                                                },
                                                                span: Span {
                                                                    start: 32,
                                                                    end: 37,
                                                                    start_line: 1,
                                                                    start_col: 33,
                                                                },
                                                            },
                                                            args: None,
                                                        },
                                                    ],
                                                    span: Span {
                                                        start: 32,
                                                        end: 37,
                                                        start_line: 1,
                                                        start_col: 33,
                                                    },
                                                },
                                            ),
                                            fields: [
                                                RecordExprField {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 5,
                                                        },
                                                        span: Span {
                                                            start: 40,
                                                            end: 41,
                                                            start_line: 1,
                                                            start_col: 41,
                                                        },
                                                    },
                                                    value: Some(
                                                        Expr {
                                                            kind: Literal(
                                                                Literal {
                                                                    kind: Int {
                                                                        value: 0,
                                                                        suffix: None,
                                                                    },
                                                                    span: Span {
                                                                        start: 43,
                                                                        end: 44,
                                                                        start_line: 1,
                                                                        start_col: 44,
                                                                    },
                                                                },
                                                            ),
                                                            span: Span {
                                                                start: 43,
                                                                end: 44,
                                                                start_line: 1,
                                                                start_col: 44,
                                                            },
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 40,
                                                        end: 44,
                                                        start_line: 1,
                                                        start_col: 41,
                                                    },
                                                },
                                            ],
                                            base: Some(
                                                Expr {
                                                    kind: Path(
                                                        ExprPath {
                                                            segments: [
                                                                ExprPathSegment {
                                                                    name: Spanned {
                                                                        node: SymbolU32 {
                                                                            value: 6,
                                                                        },
                                                                        span: Span {
                                                                            start: 48,
                                                                            end: 49,
                                                                            start_line: 1,
                                                                            start_col: 49,
                                                                        },
                                                                    },
                                                                    args: None,
                                                                },
                                                            ],
                                                            span: Span {
                                                                start: 48,
                                                                end: 49,
                                                                start_line: 1,
                                                                start_col: 49,
                                                            },
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 48,
                                                        end: 49,
                                                        start_line: 1,
                                                        start_col: 49,
                                                    },
                                                },
                                            ),
                                        },
                                        span: Span {
                                            start: 32,
                                            end: 51,
                                            start_line: 1,
                                            start_col: 33,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 24,
                                    end: 52,
                                    start_line: 1,
                                    start_col: 25,
                                },
                            },
                        ],
                        expr: None,
                        span: Span {
                            start: 7,
                            end: 54,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 54,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 54,
        start_line: 1,
        start_col: 1,
    },
}
