compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__empty_effect_row.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 13,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: Some(
                    EffectRow {
                        kind: Pure,
                        span: Span {
                            start: 18,
                            end: 20,
                            start_line: 1,
                            start_col: 19,
                        },
                    },
                ),
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Literal(
                                    Literal {
                                        kind: Int {
                                            value: 42,
                                            suffix: None,
                                        },
                                        span: Span {
                                            start: 23,
                                            end: 25,
                                            start_line: 1,
                                            start_col: 24,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 23,
                                    end: 25,
                                    start_line: 1,
                                    start_col: 24,
                                },
                            },
                        ),
                        span: Span {
                            start: 21,
                            end: 27,
                            start_line: 1,
                            start_col: 22,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 27,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 27,
        start_line: 1,
        start_col: 1,
    },
}
