compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__error_fn_without_name.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected function name, found `(`", span: Span { start: 3, end: 4, start_line: 1, start_col: 4 }, labels: [], suggestions: [], source_file: None, source_content: None }]
