compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__error_invalid_pattern_in_let.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected `;`, found `+`", span: Span { start: 15, end: 16, start_line: 1, start_col: 16 }, labels: [], suggestions: [], source_file: None, source_content: None }]
