compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__error_let_without_pattern.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected identifier, literal, `_`, `(`, `[`, or `..`, found `=`", span: Span { start: 13, end: 14, start_line: 1, start_col: 14 }, labels: [], suggestions: [], source_file: None, source_content: None }]
