compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__error_missing_else_branch.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: Some(
                    Type {
                        kind: Path(
                            TypePath {
                                segments: [
                                    TypePathSegment {
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 2,
                                            },
                                            span: Span {
                                                start: 10,
                                                end: 13,
                                                start_line: 1,
                                                start_col: 11,
                                            },
                                        },
                                        args: None,
                                    },
                                ],
                                span: Span {
                                    start: 10,
                                    end: 13,
                                    start_line: 1,
                                    start_col: 11,
                                },
                            },
                        ),
                        span: Span {
                            start: 10,
                            end: 13,
                            start_line: 1,
                            start_col: 11,
                        },
                    },
                ),
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: If {
                                    condition: Expr {
                                        kind: Literal(
                                            Literal {
                                                kind: Bool(
                                                    true,
                                                ),
                                                span: Span {
                                                    start: 19,
                                                    end: 23,
                                                    start_line: 1,
                                                    start_col: 20,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 19,
                                            end: 23,
                                            start_line: 1,
                                            start_col: 20,
                                        },
                                    },
                                    then_branch: Block {
                                        statements: [],
                                        expr: Some(
                                            Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 1,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 26,
                                                            end: 27,
                                                            start_line: 1,
                                                            start_col: 27,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 26,
                                                    end: 27,
                                                    start_line: 1,
                                                    start_col: 27,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 24,
                                            end: 29,
                                            start_line: 1,
                                            start_col: 25,
                                        },
                                    },
                                    else_branch: None,
                                },
                                span: Span {
                                    start: 16,
                                    end: 29,
                                    start_line: 1,
                                    start_col: 17,
                                },
                            },
                        ),
                        span: Span {
                            start: 14,
                            end: 31,
                            start_line: 1,
                            start_col: 15,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 31,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 31,
        start_line: 1,
        start_col: 1,
    },
}
