compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__error_missing_match_arm_body.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected literal, identifier, `(`, `[`, `{`, `if`, or `match`, found `,`", span: Span { start: 23, end: 24, start_line: 1, start_col: 24 }, labels: [], suggestions: [], source_file: None, source_content: None }]
