compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__error_missing_return_type.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected field name, found integer literal", span: Span { start: 12, end: 14, start_line: 1, start_col: 13 }, labels: [], suggestions: [], source_file: None, source_content: None }]
