compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__error_reserved_keyword_as_ident.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected identifier, literal, `_`, `(`, `[`, or `..`, found keyword `fn`", span: Span { start: 13, end: 15, start_line: 1, start_col: 14 }, labels: [], suggestions: [], source_file: None, source_content: None }]
