compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__error_struct_without_name.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected struct name, found `{`", span: Span { start: 7, end: 8, start_line: 1, start_col: 8 }, labels: [], suggestions: [], source_file: None, source_content: None }]
