compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__error_unclosed_generic.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected `>`, found `=`", span: Span { start: 24, end: 25, start_line: 1, start_col: 25 }, labels: [], suggestions: [], source_file: None, source_content: None }]
